chore: add origin and grid as optional merge parameters and wrap layer metadata
